--- a/src/components/Filter/style.css
+++ b/src/components/Filter/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 14px;
-    max-width: inherit;
+    max-width: 100%;
 }
 
 .search-tags > .tags,
